--- a/index.html
+++ b/index.html
@@ -5,81 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./scss/global.css" />
-    <title>Home</title>
+    <title>Document</title>
   </head>
   <body>
     <header class="header">
       <a href="index.html">
-        <img class="logo" src="./images/BeStrong.png" alt="logo"/>
+        <img src="./images/BeStrong.png" alt="logo" class="logo" />
       </a>
+
       <nav>
         <ul class="navbar">
-          <a href="index.html">  
-            <li class="navbarItem">Home</li>
-          </a>
-          <a> 
-            <li class="navbarItem">About Us</li>
-          </a>  
-          <a>   
-            <li class="navbarItem">Classes</li>
-          </a>  
-          <a>  
-            <li class="navbarItem">News</li>
-          </a>  
-          <a>
-            <li class="navbarItem">Contact</li>
-          </a> 
+          <li class="navbarItem">Home</li>
+          <li class="navbarItem"><a href="./about.html">About Us</a></li>
+          <li class="navbarItem">Classes</li>
+          <li class="navbarItem">News</li>
+          <li class="navbarItem">Contact</li>
         </ul>
       </nav>
+
       <div class="contact">
         <div class="phoneiconwrapper">
-          <img src="./images/call.png" alt="phone" width="10px" height="10px"/>
+          <img src="./images/call.png" alt="phone" width="10px" height="10px" />
         </div>
-        <a href="#">
-          +00 111 222 123445
-        </a>
+        <a href="#">+00 111 222 123445</a>
       </div>
+
       <div class="sidebar">
         <div class="sidebaritem">
-          <img class="socialnet" src="./images/linkedin-in.png"alt="linkedin"/>
+          <a href="https://www.linkedin.com/" target="_blank">
+            <img
+              src="./images/linkedin-in.png"
+              alt="linkedin"
+              class="socialnet"
+            />
+          </a>
+        </div>
+
+        <div class="sidebaritem">
+          <a href="https://twitter.com/" target="_blank">
+            <img src="./images/twitter.png" alt="twitter" class="socialnet" />
+          </a>
         </div>
         <div class="sidebaritem">
-          <img class="socialnet" src="./images/twitter.png" alt="twitter"/>
-        </div>
-        <div class="sidebaritem">
-          <img class="socialnet" src="./images/ic_email_24px.png" alt="email" />
+          <a href="https://mail.google.com/" target="_blank">
+            <img
+              src="./images/ic_email_24px.png"
+              alt="email"
+              class="socialnet"
+            />
+          </a>
         </div>
       </div>
     </header>
+
     <section class="section">
       <span class="subtitle">
         Practice Hard, Play Strong, Pain Is Glory.(Only for Women)
       </span>
       <h1 class="title">
-        Solutions For Moving <br>
+        Solutions For Moving <br />
         Better And Feeling Althier.
       </h1>
+
       <button class="getstartedbutton">Get Started</button>
     </section>
-     <section class="section-2">
-        <div class="bodybuild">
-          <img src="/images/Group 135.jpg" alt="img">
-          <h3>Body Building With clasic</h3>
-          <h4>Trained Achive Your Goals</h4>
-          <button>$60*/M</button>
-        </div>
-        <div class="bodybuild">
-          <img src="/images/Group 136.jpg" alt="img">
-          <h3>Body Building With Standard</h3>
-          <h4>Trained Achive Your Goals</h4>
-          <button>$120*/M</button>
-        </div>
-        <div class="bodybuild">
-          <img src="/images/Group 137.jpg" alt="img">
-          <h3>Body Building With Premium</h3>
-          <h4>Trained Achive Your Goals</h4>
-          <button>$200*/M</button>
-        </div>
-     </section>
+
+    <main class="main">
+      <div class="mainItem">
+        <h2 class="mainItemTitle">Body Building With Classic</h2>
+        <span class="mainItemSubtitle">Trained Achieve Your Goals</span>
+        <button class="mainItemButton">$60*/M</button>
+      </div>
+      <div class="mainItem">
+        <h2 class="mainItemTitle">Body Building With Standard</h2>
+        <span class="mainItemSubtitle">Trained under best trainers</span>
+        <button class="mainItemButton buttonPink">$120*/M</button>
+      </div>
+      <div class="mainItem">
+        <h2 class="mainItemTitle">Body Building With Premium</h2>
+        <span class="mainItemSubtitle">Trained Day and Night</span>
+        <button class="mainItemButton buttonBlue">$200*/M</button>
+      </div>
+    </main>
   </body>
 </html>
